# query4Opc

./: .clang-format  .gitmodules  CMakeLists.txt  ExampleQueries.md  Filter.h  Implementation.md  QueryLite.cpp  QueryLite.h  README.md  Sink.h  Source.h  Todo.md  comparison.txt  conanfile.txt  export.sh  interesting  interesting.md  main.c  main.cpp  redisImport.txt  startImm.sh
benchmark/: CMakeLists.txt  benchmark.cpp  stdFunction.cpp  stdVector.cpp
csvExport/: CMakeLists.txt  backend.h  csv.c  main.c
cypher/: CypherImpl.txt
include/: Filter.h  Source.h
include/cypher/: Ast.h  Parser.h  Path.h  QueryEngine.h
include/graph/: BrowseResultWrapper.h  Filter.h  FilterChain.h  Helper.h  HierachicalVisitor.h  MatchClause.h  Path.h  PathMatcher.h  PathResult.h  QueryEngine.h  ReferenceDescription.h  Sink.h  Source.h  SourceColumn.h  Types.h  tracing.h
include/graph/json/: json.h
models/instances/: imm.xml
models/projectinstances/: AccessDemand.xml  AccessDemand2.xml  AcousticAlarm1.xml  ActivityCheck.xml  AddSequenceStartup1.xml  AirCondition1.xml  AirValve1.xml  AirValve2.xml  AirValve3.xml  AlarmService.xml  Analog.xml  AnalogCoordination.xml  AutoSequence1.xml  AutoprotectInj1.xml  BarrelPurging1.xml  CatOPC.xml  ChargeAmp1.xml  Coding.xml  CoolingTime.xml  Core.xml  CoreMove1.xml  CoreMove2.xml  CorePressRed.xml  CoreSafety1.xml  CoreSafety2.xml  CycleTime.xml  DeliveryChute1.xml  Demolding.xml  EFlomo1.xml  EM79RobotInterface1.xml  EMRobotMonitoring1.xml  Ejector1.xml  EmergencyStopManager.xml  EnergyMeasurement.xml  ExtClosingBlock1.xml  FastMount.xml  FastMountFix.xml  FastMountMove.xml  FlexCycle1.xml  FlexCycleSyncPoint1.xml  (+113 more)
models/projecttypes/: immtypes.xml
models/types/: types.xml
models/units/: units.xml
output/: DataType  Method  Object  ObjectType  ReferenceType  Variable  VariableType  View  references
playground/: CMakeLists.txt  Commands.h  Filter.h  index.html  queryClient.cpp  queryServer.cpp
src/cypher/: Parser.cpp  Path.cpp
src/graph/: FilterChain.cpp  HierachicalVisitor.cpp  MatchClause.cpp  Path.cpp  PathMatcher.cpp  QueryEngine.cpp  SourceColumn.cpp  tracing.cpp
tests/: CMakeLists.txt  HierachicalVisitor.cpp  Path.cpp  ReferenceDescription.cpp  Testprojects  cypher.cpp  filter.cpp  filterChain.cpp  graph.xml  matchClause.cpp  objectwithproperty.xml  parser.cpp  query.cpp  subfolder.xml  subtype.xml  testHelper.h  testQueries.md  tests.tt2pro
